[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
nlib = {path="../nlib"}
fred = {path="../lib/fred.rs", futures=["replicas"]}
anyhow = "1.0.69"
paste = "1.0.11"

[dependencies.neon]
path="../lib/neon/crates/neon"
default-features=false
features=["napi-latest","proc-macros","napi-runtime","napi-runtime","futures"]

[features]
main = []
